refactor: delete comments